@startuml

title __POSTAVY's Class Diagram__\n

  namespace sk.uniza.fri {
    namespace postavy {
      class sk.uniza.fri.postavy.Chrobak {
          + Chrobak()
          + zranenieHraca()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace postavy {
      class sk.uniza.fri.postavy.Hrac {
          - cas : float
          - index : int
          - pocetMinci : int
          - sisky : LinkedList<Siska>
          - skore : int
          - texturky : Texture[]
          - vSkoku : int
          - yStare : int
          - zraneny : int
          + Hrac()
          + getPocetMinci()
          + getPocetSisiek()
          + getSiska()
          + getSkore()
          + getTexturky()
          + getZraneny()
          + getvSkoku()
          + kolizia()
          + koliziaSoZverom()
          + nastavenieTextur()
          + odpocetZraneny()
          + pohyb()
          + posun()
          + pridajSisku()
          + setIndex()
          + setPocetMinci()
          + setSkore()
          + setvSkoku()
          + skokNaZver()
          - koliziaSoZburatelnymi()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace postavy {
      class sk.uniza.fri.postavy.Jezko {
          + Jezko()
          + zranenieHraca()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace postavy {
      abstract class sk.uniza.fri.postavy.Postava {
          - textury : Texture[]
          - zivot : int
          + Postava()
          + getMapa()
          + getSmer()
          + getTextury()
          + getZivot()
          {abstract} + pohyb()
          + setSmer()
          + setZivot()
          + uberZivot()
          + vykresli()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace postavy {
      class sk.uniza.fri.postavy.Slimak {
          - pocSchovany : int
          - schovany : boolean
          + Slimak()
          + posun()
          + uberZivot()
          + zranenieHraca()
          - vylez()
      }
    }
  }
  

  namespace sk.uniza.fri {
    namespace postavy {
      abstract class sk.uniza.fri.postavy.Zviera {
          - body : int
          - rychlost : int
          + Zviera()
          + getBody()
          + getRychlost()
          + pohyb()
          + posun()
          {abstract} + zranenieHraca()
          + zranenieZvierata()
          - mozePosun()
          - zmenaSmeru()
      }
    }
  }
  

  sk.uniza.fri.postavy.Chrobak -up-|> sk.uniza.fri.postavy.Zviera
  sk.uniza.fri.postavy.Hrac -up-|> sk.uniza.fri.postavy.Postava
  sk.uniza.fri.postavy.Jezko -up-|> sk.uniza.fri.postavy.Zviera
  sk.uniza.fri.postavy.Postava -up-|> sk.uniza.fri.ZakladnaTrieda
  sk.uniza.fri.postavy.Postava o-- sk.uniza.fri.mapa.MapaZoSuboru : mapa
  sk.uniza.fri.postavy.Postava o-- sk.uniza.fri.Smer : smer
  sk.uniza.fri.postavy.Slimak -up-|> sk.uniza.fri.postavy.Zviera
  sk.uniza.fri.postavy.Zviera -up-|> sk.uniza.fri.postavy.Postava


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
